--- a/reactapp/my-restaurant-app/public/manifest.json
+++ b/reactapp/my-restaurant-app/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Délice de l'inde",
+  "name": "Indene Cuisine",
   "icons": [
     {
       "src": "favicon.ico",
